// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout Layout asideVue demo works fine 1`] = `
<div
  class="tdesign-demo-item--layout"
>
  <section
    class="t-layout"
  >
    
    <aside
      class="t-layout__sider"
    >
      
      <div
        class="t-default-menu t-menu-mode__normal t-menu--light"
        height="550px"
        style="height: 100%; width: 232px; margin-right: 50px;"
      >
        <div
          class="t-default-menu__inner"
        >
          <div
            class="t-menu__logo"
          >
            
            <img
              alt="logo"
              class="logo"
              src="https://www.tencent.com/img/index/menu_logo_hover.png"
              width="136"
            />
            
          </div>
          <ul
            class="t-menu t-menu--scroll narrow-scrollbar"
          >
            
            <li
              class="t-menu__item t-is-active"
            >
              
              <svg
                class="t-icon t-icon-dashboard"
              >
                <use
                  href="#t-icon-dashboard"
                />
              </svg>
              
              <span
                class="t-menu__content"
              >
                
                 仪表盘 
                
              </span>
            </li>
            <li
              class="t-menu__item"
            >
              
              <svg
                class="t-icon t-icon-server"
              >
                <use
                  href="#t-icon-server"
                />
              </svg>
              
              <span
                class="t-menu__content"
              >
                
                 资源列表 
                
              </span>
            </li>
            <li
              class="t-menu__item"
            >
              
              <svg
                class="t-icon t-icon-root-list"
              >
                <use
                  href="#t-icon-root-list"
                />
              </svg>
              
              <span
                class="t-menu__content"
              >
                
                 根目录 
                
              </span>
            </li>
            <li
              class="t-menu__item"
            >
              
              <svg
                class="t-icon t-icon-control-platform"
              >
                <use
                  href="#t-icon-control-platform"
                />
              </svg>
              
              <span
                class="t-menu__content"
              >
                
                 调度平台 
                
              </span>
            </li>
            <li
              class="t-menu__item"
            >
              
              <svg
                class="t-icon t-icon-precise-monitor"
              >
                <use
                  href="#t-icon-precise-monitor"
                />
              </svg>
              
              <span
                class="t-menu__content"
              >
                
                 调度平台 
                
              </span>
            </li>
            <li
              class="t-menu__item"
            >
              
              <svg
                class="t-icon t-icon-mail"
              >
                <use
                  href="#t-icon-mail"
                />
              </svg>
              
              <span
                class="t-menu__content"
              >
                
                 消息区 
                
              </span>
            </li>
            <li
              class="t-menu__item"
            >
              
              <svg
                class="t-icon t-icon-user-circle"
              >
                <use
                  href="#t-icon-user-circle"
                />
              </svg>
              
              <span
                class="t-menu__content"
              >
                
                 个人中心 
                
              </span>
            </li>
            <li
              class="t-menu__item"
            >
              
              <svg
                class="t-icon t-icon-play-circle"
              >
                <use
                  href="#t-icon-play-circle"
                />
              </svg>
              
              <span
                class="t-menu__content"
              >
                
                 视频区 
                
              </span>
            </li>
            <li
              class="t-menu__item"
            >
              
              <svg
                class="t-icon t-icon-edit-1"
              >
                <use
                  href="#t-icon-edit-1"
                />
              </svg>
              
              <span
                class="t-menu__content"
              >
                
                 资源编辑 
                
              </span>
            </li>
            
          </ul>
          <!---->
        </div>
      </div>
      
    </aside>
    <section
      class="t-layout"
    >
      
      <main
        class="t-layout__content"
      >
        
        <div>
          Content
        </div>
        
      </main>
      <footer
        class="t-layout__footer"
      >
        
        Copyright @ 2019-2021 Tencent. All Rights Reserved
        
      </footer>
      
    </section>
    
  </section>
</div>
`;

exports[`Layout Layout baseVue demo works fine 1`] = `
<div
  class="tdesign-demo-item--base"
>
  <div>
    <section
      class="t-layout"
    >
      
      <header
        class="t-layout__header"
      >
        
        Header
        
      </header>
      <main
        class="t-layout__content"
      >
        
        Content
        
      </main>
      <footer
        class="t-layout__footer"
      >
        
        Footer
        
      </footer>
      
    </section>
  </div>
  <div>
    <section
      class="t-layout"
    >
      
      <header
        class="t-layout__header"
      >
        
        Header
        
      </header>
      <section
        class="t-layout"
      >
        
        <aside
          class="t-layout__sider"
        >
          
          Aside
          
        </aside>
        <main
          class="t-layout__content"
        >
          
          Content
          
        </main>
        
      </section>
      <footer
        class="t-layout__footer"
      >
        
        Footer
        
      </footer>
      
    </section>
  </div>
  <div>
    <section
      class="t-layout"
    >
      
      <header
        class="t-layout__header"
      >
        
        Header
        
      </header>
      <section
        class="t-layout"
      >
        
        <main
          class="t-layout__content"
        >
          
          Content
          
        </main>
        <aside
          class="t-layout__sider"
        >
          
          Aside
          
        </aside>
        
      </section>
      <footer
        class="t-layout__footer"
      >
        
        Footer
        
      </footer>
      
    </section>
  </div>
  <div>
    <section
      class="t-layout"
    >
      
      <aside
        class="t-layout__sider"
      >
        
        Aside
        
      </aside>
      <section
        class="t-layout"
      >
        
        <header
          class="t-layout__header"
        >
          
          Header
          
        </header>
        <main
          class="t-layout__content"
        >
          
          Content
          
        </main>
        <footer
          class="t-layout__footer"
        >
          
          Footer
          
        </footer>
        
      </section>
      
    </section>
  </div>
</div>
`;

exports[`Layout Layout combineVue demo works fine 1`] = `
<div
  class="tdesign-demo-item--layout"
>
  <section
    class="t-layout"
  >
    
    <header
      class="t-layout__header"
    >
      
      <div
        class="t-menu t-head-menu t-menu-mode__normal t-menu--light"
        height="120px"
      >
        <div
          class="t-head-menu__inner"
        >
          <div
            class="t-menu__logo"
          >
            
            <img
              alt="logo"
              class="logo"
              src="https://www.tencent.com/img/index/menu_logo_hover.png"
              width="136"
            />
            
          </div>
          <ul
            class="t-menu"
          >
            
            <li
              class="t-menu__item t-is-active t-menu__item--plain"
            >
              <!---->
              <span
                class="t-menu__content"
              >
                
                 已选内容 
                
              </span>
            </li>
            <li
              class="t-menu__item t-menu__item--plain"
            >
              <!---->
              <span
                class="t-menu__content"
              >
                
                 菜单内容一 
                
              </span>
            </li>
            <li
              class="t-menu__item t-menu__item--plain"
            >
              <!---->
              <span
                class="t-menu__content"
              >
                
                 菜单内容二 
                
              </span>
            </li>
            <li
              class="t-menu__item t-is-disabled t-menu__item--plain"
            >
              <!---->
              <span
                class="t-menu__content"
              >
                
                 菜单内容三 
                
              </span>
            </li>
            
          </ul>
          <div
            class="t-menu__operations"
          >
            
            <a
              href="javascript:;"
            >
              <svg
                class="t-icon t-icon-search t-menu__operations-icon t-menu__operations-icon"
              >
                <use
                  href="#t-icon-search"
                />
              </svg>
            </a>
            <a
              href="javascript:;"
            >
              <svg
                class="t-icon t-icon-notification-filled t-menu__operations-icon t-menu__operations-icon"
              >
                <use
                  href="#t-icon-notification-filled"
                />
              </svg>
            </a>
            <a
              href="javascript:;"
            >
              <svg
                class="t-icon t-icon-home t-menu__operations-icon t-menu__operations-icon"
              >
                <use
                  href="#t-icon-home"
                />
              </svg>
            </a>
            
          </div>
        </div>
        <!---->
      </div>
      
    </header>
    <section
      class="t-layout"
    >
      
      <aside
        class="t-layout__sider"
      >
        
        <div
          class="t-default-menu t-menu-mode__normal t-menu--light"
          height="550px"
          style="height: 100%; width: 232px; margin-right: 50px;"
        >
          <div
            class="t-default-menu__inner"
          >
            <!---->
            <ul
              class="t-menu t-menu--scroll narrow-scrollbar"
            >
              
              <li
                class="t-menu__item t-is-active"
              >
                
                <svg
                  class="t-icon t-icon-dashboard"
                >
                  <use
                    href="#t-icon-dashboard"
                  />
                </svg>
                
                <span
                  class="t-menu__content"
                >
                  
                   仪表盘 
                  
                </span>
              </li>
              <li
                class="t-menu__item"
              >
                
                <svg
                  class="t-icon t-icon-server"
                >
                  <use
                    href="#t-icon-server"
                  />
                </svg>
                
                <span
                  class="t-menu__content"
                >
                  
                   资源列表 
                  
                </span>
              </li>
              <li
                class="t-menu__item"
              >
                
                <svg
                  class="t-icon t-icon-root-list"
                >
                  <use
                    href="#t-icon-root-list"
                  />
                </svg>
                
                <span
                  class="t-menu__content"
                >
                  
                   根目录 
                  
                </span>
              </li>
              <li
                class="t-menu__item"
              >
                
                <svg
                  class="t-icon t-icon-control-platform"
                >
                  <use
                    href="#t-icon-control-platform"
                  />
                </svg>
                
                <span
                  class="t-menu__content"
                >
                  
                   调度平台 
                  
                </span>
              </li>
              <li
                class="t-menu__item"
              >
                
                <svg
                  class="t-icon t-icon-precise-monitor"
                >
                  <use
                    href="#t-icon-precise-monitor"
                  />
                </svg>
                
                <span
                  class="t-menu__content"
                >
                  
                   调度平台 
                  
                </span>
              </li>
              <li
                class="t-menu__item"
              >
                
                <svg
                  class="t-icon t-icon-mail"
                >
                  <use
                    href="#t-icon-mail"
                  />
                </svg>
                
                <span
                  class="t-menu__content"
                >
                  
                   消息区 
                  
                </span>
              </li>
              <li
                class="t-menu__item"
              >
                
                <svg
                  class="t-icon t-icon-user-circle"
                >
                  <use
                    href="#t-icon-user-circle"
                  />
                </svg>
                
                <span
                  class="t-menu__content"
                >
                  
                   个人中心 
                  
                </span>
              </li>
              <li
                class="t-menu__item"
              >
                
                <svg
                  class="t-icon t-icon-play-circle"
                >
                  <use
                    href="#t-icon-play-circle"
                  />
                </svg>
                
                <span
                  class="t-menu__content"
                >
                  
                   视频区 
                  
                </span>
              </li>
              <li
                class="t-menu__item"
              >
                
                <svg
                  class="t-icon t-icon-edit-1"
                >
                  <use
                    href="#t-icon-edit-1"
                  />
                </svg>
                
                <span
                  class="t-menu__content"
                >
                  
                   资源编辑 
                  
                </span>
              </li>
              
            </ul>
            <!---->
          </div>
        </div>
        
      </aside>
      <section
        class="t-layout"
      >
        
        <main
          class="t-layout__content"
        >
          
          <div>
            Content
          </div>
          
        </main>
        <footer
          class="t-layout__footer"
        >
          
          Copyright @ 2019-2021 Tencent. All Rights Reserved
          
        </footer>
        
      </section>
      
    </section>
    
  </section>
</div>
`;

exports[`Layout Layout topVue demo works fine 1`] = `
<div
  class="tdesign-demo-item--layout"
>
  <section
    class="t-layout"
  >
    
    <header
      class="t-layout__header"
    >
      
      <div
        class="t-menu t-head-menu t-menu-mode__normal t-menu--light"
        height="120px"
      >
        <div
          class="t-head-menu__inner"
        >
          <div
            class="t-menu__logo"
          >
            
            <img
              alt="logo"
              class="logo"
              src="https://www.tencent.com/img/index/menu_logo_hover.png"
              width="136"
            />
            
          </div>
          <ul
            class="t-menu"
          >
            
            <li
              class="t-menu__item t-is-active t-menu__item--plain"
            >
              <!---->
              <span
                class="t-menu__content"
              >
                
                 已选内容 
                
              </span>
            </li>
            <li
              class="t-menu__item t-menu__item--plain"
            >
              <!---->
              <span
                class="t-menu__content"
              >
                
                 菜单内容一 
                
              </span>
            </li>
            <li
              class="t-menu__item t-menu__item--plain"
            >
              <!---->
              <span
                class="t-menu__content"
              >
                
                 菜单内容二 
                
              </span>
            </li>
            <li
              class="t-menu__item t-is-disabled t-menu__item--plain"
            >
              <!---->
              <span
                class="t-menu__content"
              >
                
                 菜单内容三 
                
              </span>
            </li>
            
          </ul>
          <div
            class="t-menu__operations"
          >
            
            <a
              href="javascript:;"
            >
              <svg
                class="t-icon t-icon-search t-menu__operations-icon t-menu__operations-icon"
              >
                <use
                  href="#t-icon-search"
                />
              </svg>
            </a>
            <a
              href="javascript:;"
            >
              <svg
                class="t-icon t-icon-notification-filled t-menu__operations-icon t-menu__operations-icon"
              >
                <use
                  href="#t-icon-notification-filled"
                />
              </svg>
            </a>
            <a
              href="javascript:;"
            >
              <svg
                class="t-icon t-icon-home t-menu__operations-icon t-menu__operations-icon"
              >
                <use
                  href="#t-icon-home"
                />
              </svg>
            </a>
            
          </div>
        </div>
        <!---->
      </div>
      
    </header>
    <main
      class="t-layout__content"
    >
      
      <div>
        Content
      </div>
      
    </main>
    <footer
      class="t-layout__footer"
    >
      
       Copyright @ 2019-2021 Tencent. All Rights Reserved 
      
    </footer>
    
  </section>
</div>
`;
